--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray"
+    android:background="@color/white"
     tools:context="icbc.com.musiccut.activity.MainActivity">
 
     <TextView
@@ -15,6 +15,7 @@
         android:gravity="center"
         android:text="@string/app_name"
         android:textColor="@color/colorPrimary"
+        android:layout_marginTop="5dp"
         android:textSize="@dimen/title_size"
         app:layout_constraintBottom_toTopOf="@id/mFrameMain"
         app:layout_constraintHorizontal_weight="1"
@@ -24,6 +25,7 @@
 
     <android.support.v7.widget.LinearLayoutCompat
         android:id="@+id/mLinearSearch"
+        android:layout_marginTop="5dp"
         android:layout_width="0dp"
         android:layout_height="@dimen/title_height"
         android:background="@color/white"
@@ -45,6 +47,8 @@
             android:background="@drawable/search_bg"
             android:drawableLeft="@mipmap/icon_search"
             android:drawablePadding="5dp"
+            android:focusable="false"
+            android:enabled="false"
             android:hint="@string/string_search_local_music"
             android:paddingLeft="5dp"
             android:textSize="@dimen/search_text_size" />
