--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,6 +8,9 @@
         android:id="@+id/mFragMainTabLayout"
         android:layout_width="0dp"
         android:layout_height="@dimen/title_height"
+        android:background="@color/white"
+        app:tabSelectedTextColor="@color/colorPrimary"
+        app:tabTextColor="@color/gray_deep"
         app:layout_constraintBottom_toTopOf="@id/mFragMainViewPager"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
