--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="title_height">45dp</dimen>
     <dimen name="title_size">16sp</dimen>
+    <dimen name="small_size">12sp</dimen>
     <dimen name="search_text_size">14sp</dimen>
     <dimen name="fab_add_size">55dp</dimen>
 </resources>
