--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,17 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="PlayDialog" parent="@android:style/Theme.Holo.Dialog">
+        <!-- 是否有边框 -->
+        <item name="android:windowFrame">@null</item>
+        <!-- 是否悬浮在activity之上 -->
+        <item name="android:windowIsFloating">true</item>
+        <!-- 标题 -->
+        <item name="android:windowNoTitle">true</item>
+        <!-- 阴影 半透明-->
+        <item name="android:windowIsTranslucent">true</item>
+        <!-- 点击外面可以消失 -->
+        <item name="android:windowCloseOnTouchOutside">true</item>
+    </style>
+
 </resources>
