--- a/app/src/main/res/layout/item_local_music.xml
+++ b/app/src/main/res/layout/item_local_music.xml
@@ -88,6 +88,7 @@
             android:background="@null"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
+            android:layout_marginRight="10dp"
             android:src="@mipmap/icon_menu"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
