--- a/app/src/main/res/layout/foot_layout.xml
+++ b/app/src/main/res/layout/foot_layout.xml
@@ -13,6 +13,7 @@
         android:layout_height="match_parent"
         android:drawableTop="@mipmap/icon_music_selected"
         android:gravity="center"
+        android:layout_marginRight="20dp"
         android:textColor="@color/colorPrimary"
         android:text="@string/string_music"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -22,6 +23,7 @@
         android:id="@+id/mFootTvSetting"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_marginLeft="20dp"
         android:drawableTop="@mipmap/icon_setting"
         android:gravity="center"
         android:text="@string/string_setting"
