--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -55,7 +55,7 @@
         android:layout_height="45dp"
         android:background="@color/white"
         android:gravity="center_vertical"
-        android:text="常见问题"
+        android:text="@string/string_common_question"
         app:layout_constraintLeft_toRightOf="@id/mIvQues"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mLinePraise" />
@@ -86,7 +86,7 @@
         android:layout_height="45dp"
         android:background="@color/white"
         android:gravity="center_vertical"
-        android:text="反馈"
+        android:text="@string/string_feedback"
         app:layout_constraintLeft_toRightOf="@id/mIvPraise"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mLineQues" />
@@ -110,7 +110,7 @@
         android:layout_marginTop="20dp"
         android:background="@color/white"
         android:gravity="center_vertical"
-        android:text="官方①群"
+        android:text="@string/string_qq1"
         app:layout_constraintLeft_toRightOf="@id/mIvQQ1"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mTvFeedBack" />
@@ -141,7 +141,7 @@
         android:layout_height="45dp"
         android:background="@color/white"
         android:gravity="center_vertical"
-        android:text="官方②群"
+        android:text="@string/string_qq2"
         app:layout_constraintLeft_toRightOf="@id/mIvQQ2"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mLineQQ1" />
@@ -165,7 +165,7 @@
         android:layout_marginTop="20dp"
         android:background="@color/white"
         android:gravity="center_vertical"
-        android:text="分享APP"
+        android:text="@string/string_share"
         app:layout_constraintLeft_toRightOf="@id/mIvShare"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mTvQQ2" />
@@ -196,7 +196,7 @@
         android:layout_height="45dp"
         android:background="@color/white"
         android:gravity="center_vertical"
-        android:text="公众号"
+        android:text="@string/string_wechat"
         app:layout_constraintLeft_toRightOf="@id/mIvWeChat"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mLineShare" />
@@ -227,7 +227,7 @@
         android:layout_height="45dp"
         android:background="@color/white"
         android:gravity="center_vertical"
-        android:text="切换主题"
+        android:text="@string/string_change_theme"
         app:layout_constraintLeft_toRightOf="@id/mIvTheme"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mLineWeChat" />
