--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#FF4081</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFF</color>
+    <color name="white_tran">#CCFFFFFF</color>
     <color name="black">#000000</color>
     <color name="gray">#F2F2F2</color>
     <color name="gray_deep">#757368</color>
