complate menu icon's choose and fix bug of mediaplayer reset

--- a/app/src/main/res/layout/menu_layout.xml
+++ b/app/src/main/res/layout/menu_layout.xml
@@ -53,7 +53,8 @@
             android:id="@+id/mIvMenuCut"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:src="@mipmap/icon_cut"
+            android:layout_marginBottom="4dp"
+            android:src="@mipmap/icon_menu_cut"
             app:layout_constraintBottom_toTopOf="@id/mTvMenuCut"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/mIvMenuSynthetic" />
@@ -62,6 +63,7 @@
             android:id="@+id/mTvMenuCut"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:gravity="center"
             android:text="@string/string_cut"
             android:textColor="@color/black"
@@ -74,8 +76,9 @@
             android:id="@+id/mIvMenuSynthetic"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
             android:layout_marginTop="10dp"
-            android:src="@mipmap/icon_cut"
+            android:src="@mipmap/icon_menu_synthesis"
             app:layout_constraintBottom_toTopOf="@id/mTvMenuSynthetic"
             app:layout_constraintLeft_toRightOf="@id/mIvMenuCut"
             app:layout_constraintRight_toLeftOf="@id/mIvMenuTranslate" />
@@ -84,6 +87,7 @@
             android:id="@+id/mTvMenuSynthetic"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:gravity="center"
             android:text="@string/string_synthetic"
             android:textColor="@color/black"
@@ -96,8 +100,9 @@
             android:id="@+id/mIvMenuTranslate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
             android:layout_marginTop="10dp"
-            android:src="@mipmap/icon_cut"
+            android:src="@mipmap/icon_menu_translate"
             app:layout_constraintBottom_toTopOf="@id/mTvMenuTranslate"
             app:layout_constraintLeft_toRightOf="@id/mIvMenuSynthetic"
             app:layout_constraintRight_toLeftOf="@id/mIvMenuMixing" />
@@ -106,6 +111,7 @@
             android:id="@+id/mTvMenuTranslate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:gravity="center"
             android:text="@string/string_translate"
             android:textColor="@color/black"
@@ -117,8 +123,9 @@
             android:id="@+id/mIvMenuMixing"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
             android:layout_marginTop="10dp"
-            android:src="@mipmap/icon_cut"
+            android:src="@mipmap/icon_menu_mixing"
             app:layout_constraintBottom_toTopOf="@id/mTvMenuMixing"
             app:layout_constraintLeft_toRightOf="@id/mIvMenuTranslate"
             app:layout_constraintRight_toRightOf="parent" />
@@ -127,6 +134,7 @@
             android:id="@+id/mTvMenuMixing"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:gravity="center"
             android:text="@string/string_mixing"
             android:textColor="@color/black"
@@ -138,7 +146,8 @@
             android:id="@+id/mIvMenuChangeVoice"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:src="@mipmap/icon_cut"
+            android:layout_marginBottom="4dp"
+            android:src="@mipmap/icon_menu_change_voice"
             app:layout_constraintBottom_toTopOf="@id/mTvMenuChangeVoice"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/mIvMenuFadeInOut" />
@@ -147,6 +156,7 @@
             android:id="@+id/mTvMenuChangeVoice"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:gravity="center"
             android:text="变音交流"
             android:textColor="@color/black"
@@ -159,7 +169,8 @@
             android:id="@+id/mIvMenuFadeInOut"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:src="@mipmap/icon_cut"
+            android:layout_marginBottom="4dp"
+            android:src="@mipmap/icon_menu_fade_inout"
             app:layout_constraintBottom_toTopOf="@id/mTvMenuFadeInOut"
             app:layout_constraintLeft_toRightOf="@id/mIvMenuChangeVoice"
             app:layout_constraintRight_toLeftOf="@id/mIvMenuChangeVolume" />
@@ -168,6 +179,7 @@
             android:id="@+id/mTvMenuFadeInOut"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:gravity="center"
             android:text="淡入淡出"
             android:textColor="@color/black"
@@ -180,7 +192,8 @@
             android:id="@+id/mIvMenuChangeVolume"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:src="@mipmap/icon_cut"
+            android:layout_marginBottom="4dp"
+            android:src="@mipmap/icon_menu_volume"
             app:layout_constraintBottom_toTopOf="@id/mTvMenuChangeVolume"
             app:layout_constraintLeft_toRightOf="@id/mIvMenuFadeInOut"
             app:layout_constraintRight_toLeftOf="@id/mIvMenuRecord" />
@@ -189,6 +202,7 @@
             android:id="@+id/mTvMenuChangeVolume"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:gravity="center"
             android:text="改变音量"
             android:textColor="@color/black"
@@ -200,7 +214,8 @@
             android:id="@+id/mIvMenuRecord"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:src="@mipmap/icon_cut"
+            android:layout_marginBottom="4dp"
+            android:src="@mipmap/icon_menu_record"
             app:layout_constraintBottom_toTopOf="@id/mTvMenuRecord"
             app:layout_constraintLeft_toRightOf="@id/mIvMenuChangeVolume"
             app:layout_constraintRight_toRightOf="parent" />
@@ -209,6 +224,7 @@
             android:id="@+id/mTvMenuRecord"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:gravity="center"
             android:text="录音"
             android:textColor="@color/black"
@@ -220,7 +236,8 @@
             android:id="@+id/mIvMenu4Tran3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:src="@mipmap/icon_cut"
+            android:layout_marginBottom="4dp"
+            android:src="@mipmap/icon_menu_4t3"
             app:layout_constraintBottom_toTopOf="@id/mTvMenu4Tran3"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/mIvMenuBlankVoice" />
@@ -229,7 +246,7 @@
             android:id="@+id/mTvMenu4Tran3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="20dp"
             android:gravity="center"
             android:text="视频转音频"
             android:textColor="@color/black"
@@ -242,7 +259,8 @@
             android:id="@+id/mIvMenuBlankVoice"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:src="@mipmap/icon_cut"
+            android:layout_marginBottom="4dp"
+            android:src="@mipmap/icon_menu_blank_voice"
             app:layout_constraintBottom_toTopOf="@id/mTvMenuBlankVoice"
             app:layout_constraintLeft_toRightOf="@id/mIvMenu4Tran3"
             app:layout_constraintRight_toLeftOf="@id/mIvMenuVocalTract" />
@@ -251,7 +269,7 @@
             android:id="@+id/mTvMenuBlankVoice"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="20dp"
             android:gravity="center"
             android:text="空白声音"
             android:textColor="@color/black"
@@ -264,7 +282,8 @@
             android:id="@+id/mIvMenuVocalTract"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:src="@mipmap/icon_cut"
+            android:layout_marginBottom="4dp"
+            android:src="@mipmap/icon_menu_vocal_tract"
             app:layout_constraintBottom_toTopOf="@id/mTvMenuVocalTract"
             app:layout_constraintLeft_toRightOf="@id/mIvMenuSynthetic"
             app:layout_constraintRight_toLeftOf="@id/mIvMenuMixing" />
@@ -273,7 +292,7 @@
             android:id="@+id/mTvMenuVocalTract"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="20dp"
             android:gravity="center"
             android:text="声道处理"
             android:textColor="@color/black"
