complete item menu click to bounce dialog ui

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="gray">#F2F2F2</color>
     <color name="gray_deep">#757368</color>
     <color name="gray_deep_tran">#30757368</color>
+    <color name="gray_dialog">#666666</color>
 </resources>
