--- a/app/src/main/res/layout/dialog_menu_layout.xml
+++ b/app/src/main/res/layout/dialog_menu_layout.xml
@@ -1,52 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white_tran">
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    app:cardCornerRadius="8dp">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/mInMenuLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <View
-            android:id="@+id/mLineLeft"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="1"
-            android:background="@color/gray_deep"
-            app:layout_constraintBottom_toBottomOf="@id/mTvTitle"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/mTvTitle"
-            app:layout_constraintTop_toTopOf="@id/mTvTitle" />
-
-        <View
-            android:id="@+id/mLineRight"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1"
-            android:background="@color/gray_deep"
-            app:layout_constraintBottom_toBottomOf="@id/mTvTitle"
-            app:layout_constraintLeft_toRightOf="@id/mTvTitle"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/mTvTitle" />
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/mTvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="20dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
+            android:layout_marginTop="10dp"
             android:background="@color/white"
+            android:textSize="@dimen/title_size"
             android:text="@string/string_music_operation"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@id/mIvMenuCut"
-            app:layout_constraintLeft_toRightOf="@id/mLineLeft"
-            app:layout_constraintRight_toLeftOf="@id/mLineRight" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
         <!--MenuList START-->
         <!-- ① -->
         <ImageView
@@ -113,7 +94,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:gravity="center"
-            android:text="@string/string_translate"
+            android:text="格式转换"
             android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@id/mIvMenuChangeVoice"
             app:layout_constraintLeft_toLeftOf="@id/mIvMenuTranslate"
@@ -226,7 +207,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:gravity="center"
-            android:text="录音"
+            android:text="歌曲信息"
             android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@id/mIvMenuShare"
             app:layout_constraintLeft_toLeftOf="@id/mIvMenuMusicInfo"
@@ -246,9 +227,9 @@
             android:id="@+id/mTvMenuShare"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="16dp"
             android:gravity="center"
-            android:text="视频转音频"
+            android:text="分享"
             android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@id/mIvMenuClose"
             app:layout_constraintLeft_toLeftOf="@id/mIvMenuShare"
@@ -269,14 +250,13 @@
             android:id="@+id/mTvMenuReName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="16dp"
             android:gravity="center"
-            android:text="空白声音"
+            android:text="重命名"
             android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@id/mIvMenuClose"
             app:layout_constraintLeft_toLeftOf="@id/mIvMenuReName"
             app:layout_constraintRight_toRightOf="@id/mIvMenuReName" />
-
 
         <ImageView
             android:id="@+id/mIvMenuDelete"
@@ -292,24 +272,54 @@
             android:id="@+id/mTvMenuDelete"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="16dp"
             android:gravity="center"
-            android:text="声道处理"
+            android:text="删除"
             android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@id/mIvMenuClose"
             app:layout_constraintLeft_toLeftOf="@id/mIvMenuDelete"
             app:layout_constraintRight_toRightOf="@id/mIvMenuDelete" />
+
+
+        <ImageView
+            android:id="@+id/mIvMenuRingtone"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:src="@mipmap/icon_menu_vocal_tract"
+            app:layout_constraintBottom_toTopOf="@id/mTvMenuDelete"
+            app:layout_constraintLeft_toRightOf="@id/mIvMenuDelete"
+            app:layout_constraintRight_toRightOf="parent" />
+
+        <TextView
+            android:id="@+id/mTvMenuRingtone"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:gravity="center"
+            android:text="设为铃声"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toTopOf="@id/mIvMenuClose"
+            app:layout_constraintLeft_toLeftOf="@id/mIvMenuRingtone"
+            app:layout_constraintRight_toRightOf="@id/mIvMenuRingtone" />
+
+        <View
+            android:id="@+id/mLineView"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginBottom="8dp"
+            android:background="@color/gray_deep"
+            app:layout_constraintBottom_toTopOf="@id/mIvMenuClose" />
         <!--MenuList END-->
         <ImageView
             android:id="@+id/mIvMenuClose"
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:background="@color/white"
             android:paddingBottom="10dp"
-            android:src="@mipmap/icon_close_circle"
+            android:src="@mipmap/icon_down"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
     </android.support.constraint.ConstraintLayout>
-
-</android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
