--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,7 +24,7 @@
     <style name="MenuDialog" parent="@android:style/Theme.Holo.Dialog">
         <!-- 是否有边框 -->
         <item name="android:windowFrame">@null</item>
-        <item name="android:windowBackground">@color/white</item>
+        <!--<item name="android:windowBackground">@color/white</item>-->
         <!--是否在悬浮Activity之上  -->
         <item name="android:windowIsFloating">true</item>
         <!--标题  -->
