--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,18 +36,18 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <android.support.v7.widget.AppCompatEditText
-            android:id="@+id/mEtSearch"
+        <TextView
+            android:id="@+id/mTvSearch"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="5dp"
+            android:gravity="center_vertical"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/search_bg"
             android:drawableLeft="@mipmap/icon_search"
             android:drawablePadding="5dp"
-            android:enabled="false"
             android:focusable="false"
             android:hint="@string/string_search_local_music"
             android:paddingLeft="5dp"
