--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,6 +4,105 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white_tran"
     tools:context="icbc.com.musiccut.activity.SearchActivity">
 
+    <TextView
+        android:id="@+id/mTvBack"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/title_height"
+        android:drawableLeft="@mipmap/icon_left"
+        android:gravity="center_vertical"
+        android:paddingLeft="8dp"
+        android:paddingRight="12dp"
+        android:text="返回"
+        android:textSize="@dimen/title_size"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <android.support.v7.widget.AppCompatEditText
+        android:id="@+id/mEtSearch"
+        android:layout_width="0dp"
+        android:layout_height="32dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/search_bg"
+        android:hint="音乐关键字"
+        android:paddingBottom="5dp"
+        android:paddingLeft="8dp"
+        android:paddingTop="5dp"
+        android:textColorHint="@color/gray_deep"
+        android:textSize="@dimen/title_size"
+        app:layout_constraintBottom_toBottomOf="@id/mTvBack"
+        app:layout_constraintLeft_toRightOf="@id/mTvBack"
+        app:layout_constraintRight_toLeftOf="@id/mBtnScan"
+        app:layout_constraintTop_toTopOf="@id/mTvBack" />
+
+    <Button
+        android:id="@+id/mBtnScan"
+        android:layout_width="wrap_content"
+        android:layout_height="32dp"
+        android:background="@drawable/selector_btn"
+        android:minHeight="@dimen/title_height"
+        android:minWidth="0dp"
+        android:text="扫描"
+        android:textColor="@color/white"
+        android:textSize="@dimen/title_size"
+        app:layout_constraintBottom_toBottomOf="@id/mTvBack"
+        app:layout_constraintLeft_toRightOf="@id/mEtSearch"
+        app:layout_constraintRight_toLeftOf="@id/mBtnPath"
+        app:layout_constraintTop_toTopOf="@id/mTvBack" />
+
+    <Button
+        android:id="@+id/mBtnPath"
+        android:layout_width="wrap_content"
+        android:layout_height="32dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/selector_btn"
+        android:minHeight="@dimen/title_height"
+        android:minWidth="0dp"
+        android:text="路径"
+        android:textColor="@color/white"
+        android:textSize="@dimen/title_size"
+        app:layout_constraintBottom_toBottomOf="@id/mTvBack"
+        app:layout_constraintLeft_toRightOf="@id/mBtnScan"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/mTvBack" />
+
+    <View
+        android:id="@+id/mSearchLine"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/gray_deep"
+        app:layout_constraintTop_toBottomOf="@id/mEtSearch" />
+
+    <TextView
+        android:id="@+id/mTvTips"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:text="@string/string_tips"
+        android:textSize="@dimen/small_size"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mSearchLine" />
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/mSwipeRefreshLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mTvTips">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/mRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </android.support.constraint.ConstraintLayout>
