--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white_tran"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context="icbc.com.musiccut.activity.SearchActivity">
 
     <TextView
