--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,5 +46,6 @@
         <item name="android:windowExitAnimation">@anim/dialog_exit</item>
     </style>
 
+    <style name="NoPermissions" parent="TextAppearance.AppCompat.Large.Inverse"/>
 
 </resources>
