--- a/app/src/main/res/layout/activity_music_process.xml
+++ b/app/src/main/res/layout/activity_music_process.xml
@@ -26,10 +26,10 @@
         android:layout_width="wrap_content"
         android:layout_height="@dimen/title_height"
         android:background="@color/colorPrimary"
-        android:paddingBottom="8dp"
         android:paddingLeft="8dp"
-        android:paddingRight="16dp"
         android:paddingTop="8dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="8dp"
         android:src="@mipmap/icon_arrow_left"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -57,6 +57,29 @@
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mTvTitle" />
+
+    <include
+        android:id="@+id/mCutLayout"
+        layout="@layout/process_cut_music_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mChooseLayout" />
+
+    <Button
+        android:id="@+id/mBtnSave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/selector_btn_very_radius"
+        android:minHeight="0dp"
+        android:text="保存"
+        android:textColor="@color/white"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mCutLayout" />
 
 
 </android.support.constraint.ConstraintLayout>
