--- a/app/src/main/res/layout/process_cut_music_layout.xml
+++ b/app/src/main/res/layout/process_cut_music_layout.xml
@@ -39,6 +39,7 @@
     <icbc.com.musiccut.view.SpectrumView
         android:id="@+id/mSpectrumView"
         android:layout_width="match_parent"
+        android:background="@color/black"
         android:layout_height="80dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
